--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: SMP Docs
+site_name: SMP Documentation
 nav: 
   - Home: index.md
   - Anton Paar Rheometer: anton-paar.md
@@ -14,6 +14,8 @@ nav:
   # - About: about.md
 theme:
   name: material
+  icon:
+    logo: material/microscope
   palette:
     # Palette toggle for light mode
     - scheme: default
@@ -33,7 +35,16 @@ theme:
 
 extra_css:
   - stylesheets/extra.css
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
 
 markdown_extensions:
   - attr_list
   - md_in_html
+  - pymdownx.arithmatex:
+      generic: true
+
+
+extra_javascript:
+  - javascripts/katex.js 
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js  
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
