added proper info boxes etc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,8 +40,6 @@ theme:
         icon: material/brightness-4
         name: Switch to light mode 
     
-    
-
 extra_css:
   - stylesheets/extra.css
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
@@ -58,6 +56,9 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  - admonition
+  - pymdownx.details
+      
 
 
 
