added booking system instructions

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
   - Home: index.md
   - 3D PCS: dls.md
   - Anton Paar Rheometer: anton-paar.md
+  - Booking System: booking-system.md
   - Bruker NMR (Diffusion): bruker-nmr-diffusion.md
   - DSC: dscQ20.md
   - Folium Rubbing Machine: folium-rubbing.md
@@ -63,6 +64,9 @@ markdown_extensions:
   - pymdownx.superfences
   - admonition
   - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
       
 
 
