added how to make an .ico

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
   - Raman: raman.md
   - Stelar FFC NMR: stelar-ffc.md
   - Universal Analysis (DSC analysis): universal-analysis.md
+  - Useful Tips: useful-tips.md
   - Vacuum Ovens: vacuum-ovens.md
 
   # - About: about.md
