--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 # deploy:  mkdocs gh-deploy --config-file ..\smp-lab-documentation\mkdocs.yml --remote-branch main
+# need to cd to SoftMatterPhysicsLeeds.github.io to run this.
 site_name: SMP Documentation
 site_description: Documentation for the equipment/processes used in the Soft Matter Physics Group at the University of Leeds.
 site_author: Dan Baker
@@ -15,6 +16,7 @@ nav:
   - DSC: dscQ20.md
   - Folium Rubbing Machine: folium-rubbing.md
   - Git / Github: git.md
+  - Hot Presses: hotpress.md
   - Least Squares Fitting: least-squares-fitting.md
   - Microscopy: microscope.md
   - Novocontrol Dielectric Spectrometer: novocontrol-dielectric.md
@@ -75,6 +77,7 @@ markdown_extensions:
 
 
 extra_javascript:
+  - javascripts/pressure_calculator.js
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
