added the start of some latex documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - Folium Rubbing Machine: folium-rubbing.md
   - Git / Github: git.md
   - Hot Presses: hotpress.md
+  - Latex: latex.md
   - Least Squares Fitting: least-squares-fitting.md
   - Microscopy: microscope.md
   - Novocontrol Dielectric Spectrometer: novocontrol-dielectric.md
